--- a/gamejam-2024/index.html
+++ b/gamejam-2024/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Web.loader.js";
+      var loaderUrl = buildUrl + "/WebBuild.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Web.data.br",
-        frameworkUrl: buildUrl + "/Web.framework.js.br",
-        codeUrl: buildUrl + "/Web.wasm.br",
+        dataUrl: buildUrl + "/WebBuild.data.unityweb",
+        frameworkUrl: buildUrl + "/WebBuild.framework.js.unityweb",
+        codeUrl: buildUrl + "/WebBuild.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "UwUbuntuStudios",
         productName: "Space Connect",
