--- a/index.html
+++ b/index.html
@@ -118,12 +118,8 @@
             <button onclick="location.href='https://www.roblox.com/games/7917271147/A-cross-the-border'">A cross the border (2021)</button>
             <button onclick="location.href='https://scratch.mit.edu/projects/760632306/'">The Hole (2022)</button>
             <button onclick="location.href='https://www.roblox.com/games/15324420796/Cycle-Puzzle-GameJam'">Cycle Puzzle (2023)</button>
+            <button onclick="location.href='https://uwubuntustudios.github.io/gamejam-2024'">Space Connect (2024)</button>
         </div>
-    </div>
-
-    <div class="infobar">
-        <h1>Upcoming jam 2-3 November</h1>
-        <p>The 2024 coding pirates game jam, is coming. We have planed to make a unity game. We hope we win, and dont make a bad game like the others xD.<br>Stick around to see when our game is finished!</p>
     </div>
 
     <div class="infobar">
