--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <h1>Social links</h1>
         <ul class="social-links">
             <li><a href="https://github.com/UwUbuntuStudios"><img src="https://github.com/favicon.ico" alt="Github Logo"> Github</a></li>
-            <li><a href="https://gaupestudio.no/"><img src="" alt=""> Gaupe Studio</a></li>
+            <li><a href="https://gaupestudio.com/"><img src="https://gaupestudio.com/favicon.ico" alt=""> Gaupe Studio</a></li>
         </ul>
     </div>
 </body>
